--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.31.0",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
