feat(branding): rename to Radar Financiero and refine KPI UI

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "FlujoGlobal",
-  "short_name": "FlujoGlobal",
+  "name": "Radar Financiero",
+  "short_name": "Radar Financiero",
   "description": "Gestión unificada de flujo de caja empresarial y personal",
   "start_url": "/",
   "display": "standalone",
